Addressing some TODOs. Dockerfile from scratch.
